# flamingo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.adoc  README.md  build.rs  config.client  config.server  flamingo.adoc  go.mod  go.sum  pbgen.sh  rustfmt.toml
assets/: changelog.txt  example.net.disabled  flamingo-wsproxy.service  flamingo.target  flamingo@.service
assets/deb-scripts/: postint
builder/: Dockerfile-deb  Dockerfile-musl  build.sh  config
codec/: codec.go
core/: cache.go  crypto.go  log.go  resolver.go
message/: message.pb.go  message.proto
src/: beacon.rs  cloud.rs  config.rs  device.rs  error.rs  init.rs  logger.rs  main.rs  messages.rs  net.rs  payload.rs  peer.rs  port_forwarding.rs  rotate.rs  table.rs  traffic.rs  types.rs  util.rs  wizard.rs  wsproxy.rs
src/crypto/: common.rs  core.rs  crypto.rs  init.rs  mod.rs  rotate.rs
src/poll/: epoll.rs  mod.rs
src/tests/: common.rs  mod.rs  nat.rs  payload.rs  peers.rs
