[package]
authors = ["redhat.jun@gmail.com"]
build = "build.rs"
description = "Peer-to-peer VPN"
edition = "2021"
homepage = "https://dighole.net"
keywords = ["vpn", "p2p", "tun", "tap", "network"]
license = "GPL-3.0"
name = "flamingo"
readme = "README.md"
repository = "https://github.com/tqlab/flamingo"
version = "1.0.0"

[package.metadata]
toolchain = "1.73.0"
upx_version = "4.0.1"

[dependencies]
byteorder = "1.4"
chrono = {version = "0.4", features = ["std", "clock"], default_features = false}
daemonize = "0.5"
dialoguer = {version = "0.11", optional = true}
fnv = "1"
igd = {version = "0.12", optional = true}
libc = "0.2"
log = {version = "0.4", features = ["std"]}
privdrop = "0.5"
rand = "0.8"
ring = "0.17"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
signal = "0.7"
smallvec = "1.7"
structopt = "0.3"
thiserror = "1.0"
yaml-rust = "0.4"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
iai = "0.1"
tempfile = "3"

[features]
default = ["nat", "wizard"]
nat = ["igd"]
wizard = ["dialoguer"]

[profile.release]
lto = true

[profile.dev]
lto = false

[profile.test]
lto = false

[package.metadata.deb]
assets = [
  ["target/release/flamingo", "/usr/bin/flamingo", "755"],
  ["assets/example.net.disabled", "/etc/flamingo/example.net.disabled", "600"],
  ["assets/flamingo@.service", "/lib/systemd/system/flamingo@.service", "644"],
  ["assets/flamingo.target", "/lib/systemd/system/flamingo.target", "644"],
  ["assets/flamingo-wsproxy.service", "/lib/systemd/system/flamingo-wsproxy.service", "644"],
  ["target/flamingo.1.gz", "/usr/share/man/man1/flamingo.1.gz", "644"],
]
changelog = "assets/changelog.txt"
depends = "libc6 (>= 2.23), libgcc1 (>= 1:6.0.1)"
extended-description = """\
 Flamingo is a high performance peer-to-peer mesh VPN over UDP supporting strong encryption, 
 NAT traversal and a simple configuration. It establishes a fully-meshed self-healing VPN
 network in a peer-to-peer manner with strong end-to-end encryption based on elliptic curve
 keys and AES-256. Flamingo creates a virtual network interface on the host and forwards all
 received data via UDP to the destination. It can work on TUN devices (IP based) and TAP 
 devices (Ethernet based)."""
license-file = ["LICENSE.md", "1"]
maintainer-scripts = "assets/deb-scripts"
section = "net"
